# Motion-Matching

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  array.h  character.h  common.h  controller.c  controller.cpp  database.h  extrapolation.cpp  extrapolator.h  lmm.h  mat.h  nnet.h  quat.h  shell.html  spring.h  vec.h  wasm-server.py
.github/workflows/: ci.yml
lafan01/: character.fs  checkerboard.fs  checkerboard.vs  generate_database.py  quat.py
resources/: bvh.py  character.fs  character.vs  checkerboard.fs  checkerboard.vs  generate_database.py  quat.py  tquat.py  train_common.py  train_decompressor.py  train_extrapolator.py  train_phases.py  train_projector.py  train_stepper.py  txform.py
